Fix z-index of map in request list (exposed filter)

--- a/themes/custom/masradix/assets/css/masradix.style.css
+++ b/themes/custom/masradix/assets/css/masradix.style.css
@@ -8242,7 +8242,7 @@ body .stuck {
   margin: 0;
   padding: 0;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
-  z-index: 999; }
+  z-index: 2; }
 
 body.toolbar-tray-open.toolbar-fixed.toolbar-vertical #map.stuck {
   position: fixed !important;
