--- a/themes/custom/masradix/scss/mas/_map.scss
+++ b/themes/custom/masradix/scss/mas/_map.scss
@@ -14,7 +14,7 @@ body .stuck {
   box-shadow:
     0 2px 2px 0 rgba(0,0,0,0.16), 
     0 0 0 1px rgba(0,0,0,0.08);  
-  z-index: 999;
+  z-index: 2;
 
 }
 
